--- a/src/lang/pages/home.json
+++ b/src/lang/pages/home.json
@@ -14,6 +14,15 @@
         "button": "Change format"
       }
     },
+    "ajax": {
+      "left": {
+        "title": "FastjsAjax",
+        "desc": "This, is Fast Ajax."
+      },
+      "right": {
+        "button": "Send request"
+      }
+    },
     "bottom": {
       "data": {
         "authorInfo": "Made by fastjs-team(dy-xiaodong2022)"
