--- a/src/lang/config.json
+++ b/src/lang/config.json
@@ -7,6 +7,6 @@
     "title": "Fastjs - A Powerful, simple and fast javascript library"
   },
   "zh": {
-    "unsupport": "当前页面部分内容不支持中文"
+    "title": "Fastjs - 一个强大，简洁的前端工具库"
   }
 }
