--- a/src/lang/topbar.json
+++ b/src/lang/topbar.json
@@ -1,10 +1,12 @@
 {
   "en": {
     "docs": "Docs",
-    "home": "Home"
+    "home": "Home",
+    "lang": "Language"
   },
   "zh": {
     "docs": "文档",
-    "home": "首页"
+    "home": "首页",
+    "lang": "语言"
   }
 }
