Pending changes exported from your codespace

--- a/src/lang/config.json
+++ b/src/lang/config.json
@@ -4,7 +4,7 @@
     "zh"
   ],
   "en": {
-    "title": "Fastjs - A Powerful, simple and fast javascript library"
+    "title": "Fastjs - Powerful javascript library"
   },
   "zh": {
     "title": "Fastjs - 一个强大，简洁的前端工具库"
