--- a/src/lang/pages/home.json
+++ b/src/lang/pages/home.json
@@ -1,7 +1,7 @@
 {
   "en": {
     "main": {
-      "title": "Powerful, simple and fast javascript library",
+      "title": "Fly again, with Dream.",
       "download": "Deploy npm version to your project",
       "downloadCopy": "Download command copy to your clipboard"
     },
