Update home page

--- a/src/lang/pages/home.json
+++ b/src/lang/pages/home.json
@@ -25,7 +25,7 @@
     },
     "bottom": {
       "data": {
-        "authorInfo": "Made by fastjs-team(dy-xiaodong2022)"
+        "authorInfo": "Copyright © 2023-2024 dy-xiaodong2022"
       }
     }
   },
