feature add language → Japanese

--- a/src/lang/components/topbar.json
+++ b/src/lang/components/topbar.json
@@ -10,5 +10,11 @@
     "home": "首页",
     "sponsor": "赞助",
     "lang": "语言"
+  },
+  "ja": {
+    "docs": "ドキュメント",
+    "home": "ホームページ",
+    "sponsor": "スポンサー",
+    "lang": "言語"
   }
 }
