--- a/src/lang/config.json
+++ b/src/lang/config.json
@@ -5,7 +5,7 @@
     "ja"
   ],
   "en": {
-    "title": "Fastjs - Powerful javascript library",
+    "title": "Fastjs - Fly again with us",
     "sponsor": [
       {
         "key": "github",
@@ -18,7 +18,7 @@
     ]
   },
   "zh": {
-    "title": "Fastjs - 一个强大，简洁的前端工具库",
+    "title": "Fastjs - Fly again with us",
     "sponsor": [
       {
         "key": "github",
@@ -31,7 +31,7 @@
     ]
   },
   "ja": {
-    "title": "Fastjs - 強力かつ簡潔なフロントエンド ツール ライブラリ",
+    "title": "Fastjs - Fly again with us",
     "sponsor": [
       {
         "key": "github",
