chore: update author username

--- a/src/lang/pages/home.json
+++ b/src/lang/pages/home.json
@@ -25,7 +25,7 @@
     },
     "bottom": {
       "data": {
-        "authorInfo": "Copyright © 2022-2024 dy-xiaodong2022"
+        "authorInfo": "Copyright © 2022-2024 xiaodong2008"
       }
     }
   },
@@ -55,7 +55,7 @@
     },
     "bottom": {
       "data": {
-        "authorInfo": "由fastjs-team(dy-xiaodong2022)制作"
+        "authorInfo": "由fastjs-team(xiaodong2008)制作"
       }
     }
   },
@@ -85,7 +85,7 @@
     },
     "bottom": {
       "data": {
-        "authorInfo": "dy-xiaodong2022 によって作成されました"
+        "authorInfo": "xiaodong2008 によって作成されました"
       }
     }
   }
