feat: add demo of cookie module

--- a/src/lang/pages/home.json
+++ b/src/lang/pages/home.json
@@ -23,6 +23,15 @@
         "button": "Send request"
       }
     },
+    "cookie": {
+      "left": {
+        "title": "FastjsCookie",
+        "desc": "Easy cookie, hot cookie."
+      },
+      "right": {
+        "button": "Set cookie and reload"
+      }
+    },
     "bottom": {
       "data": {
         "authorInfo": "Copyright © 2022-2024 xiaodong2008"
